# Butcher

./: .gitignore  README.md  main.py  poetry.toml  pyproject.toml
apps/image_classification/: datasets.py  models.py
apps/text_classification/: datasets.py  models.py
deploy/: prod.Dockerfile  requirements.txt
image_classification/: cnn.py  datasets.py  models.py
text_classification/: models.py  rnn.py
tools/: __init__.py  model_dumper.py
utils/: image_plotter.py
