[tool.poetry]
name = "dl-demo"
version = "0.2.0"
description = "深度学习DEMO"
authors = ["Yang Li <gmdzy2010@126.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.1.1"
tensorflow = "^2.16.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 79
indent-width = 4
target-version = "py312"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
ignore = ["E741"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["packages"]
exclude = ["**/__pycache__", ".pytest_cache", ".venv"]
pythonVersion = "3.12"
reportRedeclaration = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
